# CoRE1-2024-main

./: README.md
core1_2024_bringup/: CMakeLists.txt  package.xml
core1_2024_bringup/config/: bytetrack.yaml  tags.yaml
core1_2024_bringup/launch/: behavior.launch.py  detector_bringup.launch.py  main.launch.py  realsense.launch.py  rosbag.launch.py  sim_detector.launch.py
core1_2024_bringup/launch/debug/: apriltag.launch.py  rosbag.launch.py
core1_2024_bringup/launch/detector/panel/: panel_bringup.launch.py
